(executable
  (name main)
  (public_name satysfifmt)
  (flags (-w -3 -bin-annot -thread -safe-string))
  (libraries  ;;toml
              menhirLib
              sedlex
              uutf
              str
  )
  (preprocess
            (pps
              ppx_deriving.show
              sedlex.ppx
            ))
)

(copy_files# backend/*.{ml,mli})
(copy_files# frontend/*.{ml,mli})
(copy_files  frontend/*.{mly})


(menhir
  (modules parser)
  (flags (--table --explain)))

